dev-capec/force-app/main/default/objects/Movimentacao__c/Movimentacao__c.object-meta.xml
<CustomObject>
    <description>Objeto para controlar as entradas/saídas/trocas</description>
    <label>Movimentação</label>
    <nameField>
        <displayFormat>MOV-{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movimentações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>