dev-capec/force-app/main/default/objects/Movimentacao__c/fields/Assistido__c.field-meta.xml
<CustomField>
    <fullName>Assistido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistido</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Movimentações (Assistido)</relationshipLabel>
    <relationshipName>MovimentacoesAssistido</relationshipName>
    <type>Lookup</type>
</CustomField>