dev-capec/force-app/main/default/objects/Movimentacao__c/fields/DataEmissaoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>DataEmissaoNotaFiscal__c</fullName>
    <label>Data de Emissão da Nota Fiscal</label>
    <type>Date</type>
</CustomField>