dev-capec/force-app/main/default/objects/Movimentacao__c/fields/DataValidade__c.field-meta.xml
<CustomField>
    <fullName>DataValidade__c</fullName>
    <label>Data de Validade</label>
    <type>Date</type>
</CustomField>