dev-capec/force-app/main/default/objects/Movimentacao__c/fields/Doacao__c.field-meta.xml
<CustomField>
    <fullName>Doacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doação</label>
    <referenceTo>Doacao__c</referenceTo>
    <relationshipLabel>Movimentações</relationshipLabel>
    <relationshipName>Movimentacoes</relationshipName>
    <type>Lookup</type>
</CustomField>