dev-capec/force-app/main/default/objects/Movimentacao__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Movimentações</relationshipLabel>
    <relationshipName>MovimentacoesFornecedor</relationshipName>
    <type>Lookup</type>
</CustomField>