dev-capec/force-app/main/default/objects/Movimentacao__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <label>Nota Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>