dev-capec/force-app/main/default/objects/Movimentacao__c/recordTypes/EntradaCompra.recordType-meta.xml
<RecordType>
    <fullName>EntradaCompra</fullName>
    <active>true</active>
    <label>Entrada - Compra</label>
</RecordType>