dev-capec/force-app/main/default/objects/Movimentacao__c/recordTypes/EntradaDoacao.recordType-meta.xml
<RecordType>
    <fullName>EntradaDoacao</fullName>
    <active>true</active>
    <label>Entrada - Doação</label>
</RecordType>