dev-capec/force-app/main/default/objects/Movimentacao__c/recordTypes/SaidaDoacao.recordType-meta.xml
<RecordType>
    <fullName>SaidaDoacao</fullName>
    <active>true</active>
    <label>Saída - Doação</label>
</RecordType>