dev-capec/force-app/main/default/objects/Movimentacao__c/recordTypes/SaidaPerda.recordType-meta.xml
<RecordType>
    <fullName>SaidaPerda</fullName>
    <active>true</active>
    <label>Saída - Perda</label>
</RecordType>