dev-capec/force-app/main/default/objects/Movimentacao__c/recordTypes/SaidaVenda.recordType-meta.xml
<RecordType>
    <fullName>SaidaVenda</fullName>
    <active>true</active>
    <label>Saída - Venda</label>
</RecordType>