dev-capec/force-app/main/default/objects/Movimentacao__c/validationRules/EntradaDataNF.validationRule-meta.xml
<ValidationRule>
    <fullName>EntradaDataNF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.DeveloperName = &apos;EntradaCompra&apos;,
				ISPICKVAL(TipoEntrada__c, &apos;Com NF&apos;),
				ISBLANK(DataEmissaoNotaFiscal__c)
)</errorConditionFormula>
    <errorDisplayField>DataEmissaoNotaFiscal__c</errorDisplayField>
    <errorMessage>Preencha esse campo.</errorMessage>
</ValidationRule>