dev-capec/force-app/main/default/objects/Movimentacao__c/validationRules/EntradaFornecedor.validationRule-meta.xml
<ValidationRule>
    <fullName>EntradaFornecedor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.DeveloperName = &apos;EntradaCompra&apos;,
				ISPICKVAL(TipoEntrada__c, &apos;Com NF&apos;),
				ISBLANK(Fornecedor__c)
)</errorConditionFormula>
    <errorDisplayField>Fornecedor__c</errorDisplayField>
    <errorMessage>Preencha esse campo.</errorMessage>
</ValidationRule>